styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --back: #324760; /* Theme background color (#324760) */
  --green: #28b123; /* Success color (#28B123) */
  --terminal-output: #3DCFEF;
  --input-text: #6e7d92;
}

.-theme-purple {
  --back: rgba(77, 40, 89); /* #4D2859 */
}

.-theme-red {
  --back: rgba(111, 39, 45); /* #6F272D */
}

.-theme-brown {
  --back: rgba(82, 68, 69); /* #524445 */
}

html {
  scroll-behavior: smooth;
}

.homepage-img {
  background-image: url('https://saving-satoshi.s3.amazonaws.com/main-image.png');
}

.ch1-background {
  background-image: url('https://saving-satoshi.s3.amazonaws.com/ch2.png');
  background-repeat: no-repeat;
  background-size: cover;
}

.blur {
  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
  backdrop-filter: blur(75px);
  background: rgba(46, 64, 90, 0.75);
}

.fix-grow-issue [data-nextjs-scroll-focus-boundary] {
  flex-grow: 1;
  display: flex;
  flex-direction: column;
}

@layer base {
  body {
    @apply bg-back;
  }
}

/* Overriding terminal styles */
div.react-terminal-wrapper {
  display: flex !important;
  flex-direction: column;
  flex-grow: 1;
  padding: 20px 20px 0 20px;
}

div.react-terminal {
  gap: 10px;
  display: flex;
  flex-grow: 1;
}

div.react-terminal-wrapper.react-terminal-light {
  background: transparent;
  display: block;
  width: auto;
  font-family: var(--space-mono-font);
  font-size: 18px;
  width: 100%;
}

div.react-terminal-wrapper:after {
  content: '';
  display: none;
}

div.react-terminal-input[data-terminal-prompt]:before {
  content: '>';
  color: white;
}

div.react-terminal-input:before {
  margin-right: 0.25em;
  content: '>';
}

div.react-terminal-wrapper:before {
  content: '';
  display: none;
}

div.react-terminal-wrapper:focus-within .react-terminal-active-input:after {
  content: '▋';
  color: white;
  font-family: monospace;
  font-family: var(--space-mono-font);
  -webkit-animation: blink 1s infinite;
  animation: blink 1s infinite;
}

.react-terminal-previous-input .react-terminal-line:before {
  margin-right: 0.25em;
  content: '>';
  color: white !important;
  opacity: 0.8;
}

.react-terminal-output .react-terminal-line:before {
  margin-right: 0.25em;
  content: '>';
  color: var(--terminal-output) !important;
}

div.react-terminal-line {
  white-space: unset !important;
  line-break: anywhere;
}

div.react-terminal-active-input {
  color: white;
}

.underscore {
  color: var(--input-text);
}

.correct {
  color: white;
}

.overlay-complete > .correct {
  color: var(--green)
}

.incorrect {
  color: var(--terminal-output);
}
.code::-webkit-scrollbar {
  height: 8px;
}

.code::-webkit-scrollbar-track {
  box-shadow: none;
}

.code::-webkit-scrollbar-thumb {
  background-color: #243142;
  outline: #243142;
  border-radius: 4px;
}

